--- a/index.html
+++ b/index.html
@@ -16,14 +16,55 @@
     <div class="header-title">
       <h1>Experience</h1>
       <h2 class="subtitle"><span class="high">Mars</span> like never before</h2>
-
+      <div class="facts">
+        <div class="fact1">
+          <p class="fact-title">Two Moons</p>
+          <p>Mars has two moons named Phobos and Deimos.</p>
+        </div>
+        <div class="fact1">
+          <p class="fact-title">Longer days</p>
+          <p>Mars makes a complete orbit around the Sun (a year in Martian time) in 687 Earth days.</p>
+        </div>
+        <div class="fact1">
+          <p class="fact-title">Ringless</p>
+          <p>There are no rings around Mars.</p>
+        </div>
+      </div>
     </div>
     <div class="header-title">
-      <h1>Experience</h1>
+      <ul class="cards">
+        <li class="card">
+          <h2 class="card-title">Tough place</h2>
+          <p class="divider">◤━━━━━━━━━━━━━━━━━━━━◥</p>
+          <div class="centered">
+            <img class="icon" src="imgs/FireSVG.svg" alt="">
+          </div>
+          <p>At this time, Mars' surface cannot support life as we know it. Current missions are determining Mars' past and future potential for life.</p>
+        </li>
+        <li class="card">
+          <h2 class="card-title">Rusty planet</h2>
+          <p class="divider">◤━━━━━━━━━━━━━━━━━━━━◥</p>
+          <div class="centered">
+            <img class="icon" src="imgs/RustyPlanetSVG.svg" alt="">
+          </div>
+          <p>Mars is known as the Red Planet because iron minerals in the Martian soil oxidize, or rust, causing the soil and atmosphere to look red.</p>
+        </li>
+        <li class="card">
+          <h2 class="card-title">Many missions</h2>
+          <p class="divider">◤━━━━━━━━━━━━━━━━━━━━◥</p>
+          <div class="centered">
+            <img class="icon" src="imgs/SpaceShipSVG.svg" alt="">
+          </div>
+          <p>Several missions have visited this planet, from flybys and orbiters to rovers on the surface.The first true Mars mission success was the Mariner 4 flyby in 1965.</p>
+        </li>
+      </ul>
     </div>
-    <div class="header-title"><h1>Experience</h1></div>
-    <div class="header-title"><h1>Experience</h1></div>
-
+    <div class="header-title"></div>
+    <div class="header-title"></div>
+    <div class="footer">
+      <h2>Mars Experience</h2>
+      <p>Created by <a href="https://www.linkedin.com/in/%C8%99tefan-secrieru-b0b60b224/">Stefan Secrieru</a></p>
+    </div>
 
     <script type="module" src="/main.js"></script>
   </body>
