Try to fix model not found

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Mars Experience</title>
     <link rel="stylesheet" href="style.css">
 <!--    Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
       <ul class="cards">
         <li class="card">
           <h2 class="card-title">Tough place</h2>
-          <p class="divider">◤━━━━━━━━━━━━━━━━━━━━◥</p>
+          <p class="divider">◤━━━━━━━━━━━━━━━━◥</p>
           <div class="centered">
             <img class="icon" src="imgs/FireSVG.svg" alt="">
           </div>
@@ -43,7 +43,7 @@
         </li>
         <li class="card">
           <h2 class="card-title">Rusty planet</h2>
-          <p class="divider">◤━━━━━━━━━━━━━━━━━━━━◥</p>
+          <p class="divider">◤━━━━━━━━━━━━━━━━◥</p>
           <div class="centered">
             <img class="icon" src="imgs/RustyPlanetSVG.svg" alt="">
           </div>
@@ -51,7 +51,7 @@
         </li>
         <li class="card">
           <h2 class="card-title">Many missions</h2>
-          <p class="divider">◤━━━━━━━━━━━━━━━━━━━━◥</p>
+          <p class="divider">◤━━━━━━━━━━━━━━━━◥</p>
           <div class="centered">
             <img class="icon" src="imgs/SpaceShipSVG.svg" alt="">
           </div>
