--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mars Experience</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 <!--    Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
           <h2 class="card-title">Tough place</h2>
           <p class="divider">◤━━━━━━━━━━━━━━━━◥</p>
           <div class="centered">
-            <img class="icon" src="imgs/FireSVG.svg" alt="">
+            <img class="icon" src="../imgs/FireSVG.svg" alt="">
           </div>
           <p>At this time, Mars' surface cannot support life as we know it. Current missions are determining Mars' past and future potential for life.</p>
         </li>
@@ -45,7 +45,7 @@
           <h2 class="card-title">Rusty planet</h2>
           <p class="divider">◤━━━━━━━━━━━━━━━━◥</p>
           <div class="centered">
-            <img class="icon" src="imgs/RustyPlanetSVG.svg" alt="">
+            <img class="icon" src="../imgs/RustyPlanetSVG.svg" alt="">
           </div>
           <p>Mars is known as the Red Planet because iron minerals in the Martian soil oxidize, or rust, causing the soil and atmosphere to look red.</p>
         </li>
@@ -53,7 +53,7 @@
           <h2 class="card-title">Many missions</h2>
           <p class="divider">◤━━━━━━━━━━━━━━━━◥</p>
           <div class="centered">
-            <img class="icon" src="imgs/SpaceShipSVG.svg" alt="">
+            <img class="icon" src="../imgs/SpaceShipSVG.svg" alt="">
           </div>
           <p>Several missions have visited this planet, from flybys and orbiters to rovers on the surface.The first true Mars mission success was the Mariner 4 flyby in 1965.</p>
         </li>
